--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -204,8 +204,8 @@
                 openRemoteConfigModal($event.editTarget, $event.existingConfig)
               "
               (openInFiles)="openRemoteInFilesWithPath($event.remoteName, $event.path)"
-              (extendedData)="handleExtendedData($event)"
             >
+              <!-- (extendedData)="handleExtendedData($event)" -->
             </app-app-detail>
           }
         }
