--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -157,5 +157,9 @@
     <button mat-menu-item (click)="openAboutModal()" aria-label="About application">
       <span>About RClone Manager</span>
     </button>
+
+    <button mat-menu-item (click)="openPasswordManager()" aria-label="View application logs">
+      <span>View Logs</span>
+    </button>
   </mat-menu>
 </div>
