--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.html
@@ -32,13 +32,8 @@
     }
 
     <!-- Close Button -->
-    <button
-      mat-icon-button
-      class="close-button"
-      (click)="close()"
-      aria-label="Close preferences dialog"
-    >
-      <mat-icon svgIcon="close"></mat-icon>
+    <button mat-icon-button (click)="close()" aria-label="Close preferences dialog">
+      <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
 
