--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -11,7 +11,7 @@
     </button>
     <p>Keyboard Shortcuts</p>
     <button mat-icon-button (click)="close()" aria-label="Close shortcuts dialog">
-      <mat-icon svgIcon="close"></mat-icon>
+      <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
 
